# agent-army

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  FILE_SUMMARY.md  LAUNCH_GUIDE.md  MCP_IMPLEMENTATION_CHECKLIST.md  MCP_INTEGRATION_GUIDE.md  MCP_SERVER_INDEX.md  MCP_SERVER_README.md  MCP_SERVER_SUMMARY.md  MODELS_GUIDE.md  Makefile  NEW_MODULES_SUMMARY.md  QUICKSTART_AUTONOMOUS.md  README.md  USAGE_EXAMPLE.md  VOICE_INTEGRATION_GUIDE.md  package.json  pyproject.toml  requirements.txt  verify_files.py
config/: autonomy_policies.yaml  mcp_server.yaml  security_policies.yaml  settings.yaml
config/agents/: builder.yaml  commander.yaml  inspector.yaml  sentinel.yaml  watcher.yaml
docker/: Dockerfile.agent  Dockerfile.gateway  docker-compose.local.yaml  docker-compose.yaml
docs/: ARCHITECTURE.md
examples/: model_integration_examples.py  voice_integration_example.py
scripts/: build_app.py  cli.py  init-db.sql  setup.sh  start_mcp.py
src/: __init__.py  main.py
src/agents/: __init__.py  automator.py  builder.py  designer.py  devops.py  inspector.py  linter.py  marketer.py  scheduler.py  scout.py  scribe.py  sentinel.py  watcher.py
src/api/: __init__.py  setup.py
src/bridges/: __init__.py  figma.py  github.py  google_oauth.py  jira.py  playwright_runner.py  voice.py  webhook_handler.py  whatsapp.py  whatsapp_digest.py  whatsapp_voice.py
src/cli/: __init__.py  client.py  formatter.py  repl.py
src/cluster/: __init__.py  center_tools.py  registry.py  worker_client.py
src/core/: __init__.py  agent_base.py  autonomous_workflow.py  config.py  message_bus.py  orchestrator.py  reasoning.py  reranker.py  task_manager.py
src/dashboard/: __init__.py  index.html
src/desktop/: __init__.py  app.py
src/mcp_server/: __init__.py  client_manager.py  server.py
src/models/: __init__.py  bielik_client.py  claude_client.py  gemini_client.py  huggingface_client.py  kimi_client.py  ollama_client.py  openai_client.py  rlm_engine.py  router.py  router_extensions.py  schemas.py
src/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
src/protocols/: __init__.py  a2a.py
src/security/: __init__.py  audit.py  auth.py  autonomous_operations.py  capabilities.py  guardrails.py  policy_engine.py  sandbox.py  secrets.py  threat_detector.py  trust_score.py
src/storage/: __init__.py  conversation_store.py  database.py  graph_rag.py  hypergraph_store.py  memory.py  memory_graph_store.py  memory_store.py  neo4j_store.py  redis_store.py
tests/: test_mcp_server.py
